# terraform-fastapi-ec2

./: .gitignore  Dockerfile  Makefile  pyproject.toml
app/: main.py
terraform/: main.tf
