[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Daniel Saldivar", email = ""},
]
dependencies = [
    "fastapi>=0.79.0",
    "uvicorn>=0.18.2",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
